RESOLVED FIXED92333
Fix null ptr deref in CSSParser::storeVariableDeclaration().
https://bugs.webkit.org/show_bug.cgi?id=92333
Summary Fix null ptr deref in CSSParser::storeVariableDeclaration().
Luke Macpherson
Reported 2012-07-25 22:43:21 PDT
Fix null ptr deref in CSSParser::storeVariableDeclaration().
Attachments
Patch (2.77 KB, patch)
2012-07-25 22:46 PDT, Luke Macpherson
no flags
Luke Macpherson
Comment 1 2012-07-25 22:46:20 PDT
WebKit Review Bot
Comment 2 2012-07-26 01:32:59 PDT
Comment on attachment 154545 [details] Patch Clearing flags on attachment: 154545 Committed r123714: <http://trac.webkit.org/changeset/123714>
WebKit Review Bot
Comment 3 2012-07-26 01:33:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.