Fix null ptr deref in CSSParser::storeVariableDeclaration(). https://bugs.webkit.org/show_bug.cgi?id=92333

Reviewed by Andreas Kling.

Fix null pointer deref that occurs if the CSSParserValue couldn't be converted to a CSSValue.

Test fast/css/variables/variable-unparseable-value-crash.html added.

* css/CSSParser.cpp:
(WebCore::CSSParser::storeVariableDeclaration):


Canonical link: https://commits.webkit.org/110150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123714 268f45cc-cd09-0410-ab3c-d52691b4dbfc